--- a/public/index.html
+++ b/public/index.html
@@ -20,18 +20,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/ff.png">
   <link rel="manifest" href="/site.webmanifest">
 
-  <!-- Delete this part after cloning. You can use your own google analytics code -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-29C55KWFJX"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-29C55KWFJX');
-  </script>
-<!-- Delete till here -->
-
-  <title>Fiz 🤟| Portfolio</title>
+  <title>Homer Portfolio</title>
 </head>
 
 <body>
